@@ -1,4 +1,4 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.3 2013/02/09 21:36:02 wiz Exp $
 bin/cloog
 include/cloog/block.h
 include/cloog/clast.h
@@ -23,51 +23,5 @@ include/cloog/statement.h
 include/cloog/stride.h
 include/cloog/union_domain.h
 include/cloog/version.h
-include/isl/aff.h
-include/isl/aff_type.h
-include/isl/arg.h
-include/isl/ast.h
-include/isl/ast_build.h
-include/isl/band.h
-include/isl/blk.h
-include/isl/config.h
-include/isl/constraint.h
-include/isl/ctx.h
-include/isl/dim.h
-include/isl/flow.h
-include/isl/hash.h
-include/isl/id.h
-include/isl/ilp.h
-include/isl/int.h
-include/isl/list.h
-include/isl/local_space.h
-include/isl/lp.h
-include/isl/map.h
-include/isl/map_type.h
-include/isl/mat.h
-include/isl/multi.h
-include/isl/obj.h
-include/isl/options.h
-include/isl/point.h
-include/isl/polynomial.h
-include/isl/polynomial_type.h
-include/isl/printer.h
-include/isl/schedule.h
-include/isl/seq.h
-include/isl/set.h
-include/isl/set_type.h
-include/isl/space.h
-include/isl/stdint.h
-include/isl/stream.h
-include/isl/union_map.h
-include/isl/union_map_type.h
-include/isl/union_set.h
-include/isl/union_set_type.h
-include/isl/vec.h
-include/isl/version.h
-include/isl/vertices.h
 lib/libcloog-isl.la
-lib/libisl.la
-lib/libisl.so.10.1.1-gdb.py
 lib/pkgconfig/cloog-isl.pc
-lib/pkgconfig/isl.pc
