@@ -1,13 +1,15 @@
-# $NetBSD: buildlink3.mk,v 1.1.1.1 2012/04/08 20:47:52 wiz Exp $
+# $NetBSD$
 
 BUILDLINK_TREE+=	cloog
 
 .if !defined(CLOOG_BUILDLINK3_MK)
 CLOOG_BUILDLINK3_MK:=
 
-BUILDLINK_API_DEPENDS.cloog+=	cloog>=0.16.2
+BUILDLINK_API_DEPENDS.cloog+=	cloog>=0.18.0nb1
 BUILDLINK_PKGSRCDIR.cloog?=	../../math/cloog
 
-.endif # CLOOG_BUILDLINK3_MK
+.include "../../devel/gmp/buildlink3.mk"
+.include "../../math/isl/buildlink3.mk"
+.endif	# CLOOG_BUILDLINK3_MK
 
 BUILDLINK_TREE+=	-cloog
