@@ -1,0 +1,6 @@
+isl is a library for manipulating sets and relations of integer
+points bounded by linear constraints. Supported operations on sets
+include intersection, union, set difference, emptiness check, convex
+hull, (integer) affine hull, integer projection, and computing the
+lexicographic minimum using parametric integer programming. It also
+includes an ILP solver based on generalized basis reduction.
