@@ -1,0 +1,13 @@
+# $NetBSD$
+
+BUILDLINK_TREE+=	isl
+
+.if !defined(ISL_BUILDLINK3_MK)
+ISL_BUILDLINK3_MK:=
+
+BUILDLINK_API_DEPENDS.isl+=	isl>=0.11.1
+BUILDLINK_PKGSRCDIR.isl?=	../../math/isl
+
+.endif # ISL_BUILDLINK3_MK
+
+BUILDLINK_TREE+=	-isl
