@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (isl-0.11.1.tar.bz2) = d7936929c3937e03f09b64c3c54e49422fa8ddb3
+RMD160 (isl-0.11.1.tar.bz2) = d091a2f0f7489d2d2f042514ab39ebdccb33d4e5
+Size (isl-0.11.1.tar.bz2) = 1244610 bytes
